// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vault Deposit can go back from full fees descriptions 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-6"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-21"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-9 MuiDialog-scrollPaper-7"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-23 MuiDialog-paper-10 MuiDialog-paperScrollPaper-11 MuiDialog-paperWidthSm-15 MuiDialog-paperFullWidth-19 MuiPaper-elevation24-50 MuiPaper-rounded-24"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-358 makeStyles-root-354"
        >
          <h2
            class="MuiTypography-root-56 MuiTypography-h6-66"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
            >
              <div
                class="MuiGrid-root-86 makeStyles-logoContainer-357 MuiGrid-item-88"
              >
                <div
                  class="makeStyles-root-359"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-360"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-item-88"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-mode-355 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
                >
                  Deposit
                </p>
                <p
                  class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextPrimary-81"
                >
                  Curve.fi renBTC/wBTC/sBTC
                </p>
              </div>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-361 makeStyles-content-1 MuiDialogContent-dividers-362"
        >
          <div
            class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
              >
                Available: 0.000000000000000000
              </p>
            </div>
            <div
              class="MuiGrid-root-86 WithStyles(ForwardRef(Grid))-root-363 WithStyles(ForwardRef(Grid))-root-364 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <div
                class="MuiButtonGroup-root-365"
                role="group"
              >
                <button
                  aria-label="25%"
                  class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-outlined-224 MuiButtonGroup-grouped-371 MuiButtonGroup-groupedHorizontal-372 MuiButtonGroup-groupedOutlined-379 MuiButtonGroup-groupedOutlinedHorizontal-380 MuiButtonGroup-groupedOutlined-379 MuiButton-outlinedSizeSmall-236 MuiButton-sizeSmall-240"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-220"
                  >
                    25
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-452"
                  />
                </button>
                <button
                  aria-label="50%"
                  class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-outlined-224 MuiButtonGroup-grouped-371 MuiButtonGroup-groupedHorizontal-372 MuiButtonGroup-groupedOutlined-379 MuiButtonGroup-groupedOutlinedHorizontal-380 MuiButtonGroup-groupedOutlined-379 MuiButton-outlinedSizeSmall-236 MuiButton-sizeSmall-240"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-220"
                  >
                    50
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-452"
                  />
                </button>
                <button
                  aria-label="75%"
                  class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-outlined-224 MuiButtonGroup-grouped-371 MuiButtonGroup-groupedHorizontal-372 MuiButtonGroup-groupedOutlined-379 MuiButtonGroup-groupedOutlinedHorizontal-380 MuiButtonGroup-groupedOutlined-379 MuiButton-outlinedSizeSmall-236 MuiButton-sizeSmall-240"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-220"
                  >
                    75
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-452"
                  />
                </button>
                <button
                  aria-label="100%"
                  class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-outlined-224 MuiButtonGroup-grouped-371 MuiButtonGroup-groupedHorizontal-372 MuiButtonGroup-groupedOutlined-379 MuiButtonGroup-groupedOutlinedHorizontal-380 MuiButtonGroup-groupedOutlined-379 MuiButton-outlinedSizeSmall-236 MuiButton-sizeSmall-240"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-220"
                  >
                    100
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-452"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root-392 MuiTextField-root-391 WithStyles(ForwardRef(TextField))-root-389 WithStyles(ForwardRef(TextField))-root-390 MuiFormControl-fullWidth-395"
          >
            <div
              class="MuiInputBase-root-411 MuiOutlinedInput-root-396 MuiInputBase-fullWidth-421 MuiInputBase-formControl-412"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input-422 MuiOutlinedInput-input-406"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="Type an amount to deposit"
                spellcheck="false"
                style="text-align: right;"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-429 MuiOutlinedInput-notchedOutline-405"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-430"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="makeStyles-fees-3"
          >
            <div
              class="makeStyles-titleContainer-435"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58"
              >
                Fees
              </p>
              <svg
                aria-hidden="true"
                aria-label="see fees descriptions"
                class="MuiSvgIcon-root-311 makeStyles-helpIcon-437 MuiSvgIcon-colorPrimary-312"
                focusable="false"
                title="Click to see full description"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                />
              </svg>
            </div>
            <hr
              class="MuiDivider-root-320 makeStyles-divider-434"
            />
            <div
              class="MuiGrid-root-86 MuiGrid-container-87"
            >
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-449 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.2%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-449 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Strategist Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.1%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-449 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Withdraw Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.5%
                </h6>
              </div>
            </div>
          </div>
          <button
            aria-label="Deposit"
            class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-contained-227 WithStyles(ForwardRef(Button))-root-450 WithStyles(ForwardRef(Button))-root-451 MuiButton-containedPrimary-228 MuiButton-containedSizeLarge-239 MuiButton-sizeLarge-241 MuiButton-disabled-232 MuiButton-fullWidth-242 MuiButtonBase-disabled-249"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-220"
            >
              Deposit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Vault Deposit can see full fees descriptions 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-6"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-21"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-9 MuiDialog-scrollPaper-7"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-23 MuiDialog-paper-10 MuiDialog-paperScrollPaper-11 MuiDialog-paperWidthSm-15 MuiDialog-paperFullWidth-19 MuiPaper-elevation24-50 MuiPaper-rounded-24"
        role="dialog"
      >
        <div
          class="MuiGrid-root-86 makeStyles-root-340 MuiGrid-container-87"
        >
          <div
            class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95 MuiGrid-justify-content-xs-space-between-106"
          >
            <p
              class="MuiTypography-root-56 makeStyles-title-341 MuiTypography-body1-58 MuiTypography-displayInline-84"
            >
              Fee Information
            </p>
            <button
              class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-text-221 makeStyles-backButton-4 MuiButton-textPrimary-222"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-220"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-311 makeStyles-arrowIcon-5"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                  />
                </svg>
                Back
              </span>
              <span
                class="MuiTouchRipple-root-344"
              />
            </button>
          </div>
          <div
            class="makeStyles-content-342"
          >
            <p
              class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
            >
              Fees are charged on certain Sett Vaults, and are sent to the BadgerDAO treasury, or shared with the strategist who wrote the vault strategy.
            </p>
            <hr
              class="MuiDivider-root-320 makeStyles-divider-343"
            />
            <div>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Performance Fees are assessed on the profit that the strategy creates
              </p>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Management Fees are charged on the entire principal over the course of a year
              </p>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Both Performance and Management Fees are factored into all ROI calculations
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Vault Deposit displays sett information 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-6"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-21"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-9 MuiDialog-scrollPaper-7"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-23 MuiDialog-paper-10 MuiDialog-paperScrollPaper-11 MuiDialog-paperWidthSm-15 MuiDialog-paperFullWidth-19 MuiPaper-elevation24-50 MuiPaper-rounded-24"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-55 makeStyles-root-51"
        >
          <h2
            class="MuiTypography-root-56 MuiTypography-h6-66"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
            >
              <div
                class="MuiGrid-root-86 makeStyles-logoContainer-54 MuiGrid-item-88"
              >
                <div
                  class="makeStyles-root-189"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-190"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-item-88"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-mode-52 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
                >
                  Deposit
                </p>
                <p
                  class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextPrimary-81"
                >
                  Curve.fi renBTC/wBTC/sBTC
                </p>
              </div>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-191 makeStyles-content-1 MuiDialogContent-dividers-192"
        >
          <div
            class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
              >
                Available: 0.000000000000000000
              </p>
            </div>
            <div
              class="MuiGrid-root-86 WithStyles(ForwardRef(Grid))-root-193 WithStyles(ForwardRef(Grid))-root-194 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <div
                class="MuiButtonGroup-root-195"
                role="group"
              >
                <button
                  aria-label="25%"
                  class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-outlined-224 MuiButtonGroup-grouped-201 MuiButtonGroup-groupedHorizontal-202 MuiButtonGroup-groupedOutlined-209 MuiButtonGroup-groupedOutlinedHorizontal-210 MuiButtonGroup-groupedOutlined-209 MuiButton-outlinedSizeSmall-236 MuiButton-sizeSmall-240"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-220"
                  >
                    25
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-330"
                  />
                </button>
                <button
                  aria-label="50%"
                  class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-outlined-224 MuiButtonGroup-grouped-201 MuiButtonGroup-groupedHorizontal-202 MuiButtonGroup-groupedOutlined-209 MuiButtonGroup-groupedOutlinedHorizontal-210 MuiButtonGroup-groupedOutlined-209 MuiButton-outlinedSizeSmall-236 MuiButton-sizeSmall-240"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-220"
                  >
                    50
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-330"
                  />
                </button>
                <button
                  aria-label="75%"
                  class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-outlined-224 MuiButtonGroup-grouped-201 MuiButtonGroup-groupedHorizontal-202 MuiButtonGroup-groupedOutlined-209 MuiButtonGroup-groupedOutlinedHorizontal-210 MuiButtonGroup-groupedOutlined-209 MuiButton-outlinedSizeSmall-236 MuiButton-sizeSmall-240"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-220"
                  >
                    75
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-330"
                  />
                </button>
                <button
                  aria-label="100%"
                  class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-outlined-224 MuiButtonGroup-grouped-201 MuiButtonGroup-groupedHorizontal-202 MuiButtonGroup-groupedOutlined-209 MuiButtonGroup-groupedOutlinedHorizontal-210 MuiButtonGroup-groupedOutlined-209 MuiButton-outlinedSizeSmall-236 MuiButton-sizeSmall-240"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-220"
                  >
                    100
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-330"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root-254 MuiTextField-root-253 WithStyles(ForwardRef(TextField))-root-251 WithStyles(ForwardRef(TextField))-root-252 MuiFormControl-fullWidth-257"
          >
            <div
              class="MuiInputBase-root-273 MuiOutlinedInput-root-258 MuiInputBase-fullWidth-283 MuiInputBase-formControl-274"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input-284 MuiOutlinedInput-input-268"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="Type an amount to deposit"
                spellcheck="false"
                style="text-align: right;"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-291 MuiOutlinedInput-notchedOutline-267"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-292"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="makeStyles-fees-3"
          >
            <div
              class="makeStyles-titleContainer-297"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58"
              >
                Fees
              </p>
              <svg
                aria-hidden="true"
                aria-label="see fees descriptions"
                class="MuiSvgIcon-root-311 makeStyles-helpIcon-299 MuiSvgIcon-colorPrimary-312"
                focusable="false"
                title="Click to see full description"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                />
              </svg>
            </div>
            <hr
              class="MuiDivider-root-320 makeStyles-divider-296"
            />
            <div
              class="MuiGrid-root-86 MuiGrid-container-87"
            >
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-327 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.2%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-327 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Strategist Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.1%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-327 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Withdraw Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.5%
                </h6>
              </div>
            </div>
          </div>
          <button
            aria-label="Deposit"
            class="MuiButtonBase-root-248 MuiButton-root-219 MuiButton-contained-227 WithStyles(ForwardRef(Button))-root-328 WithStyles(ForwardRef(Button))-root-329 MuiButton-containedPrimary-228 MuiButton-containedSizeLarge-239 MuiButton-sizeLarge-241 MuiButton-disabled-232 MuiButton-fullWidth-242 MuiButtonBase-disabled-249"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-220"
            >
              Deposit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
